@@ -248,7 +248,7 @@ if (global) {
     dimnames(tbl) <- list(c(termname, "GLOBAL"), c("chisq", "df", "p"))
 }
 else {
-    tbl <- cbind(test, df, pchisq(test, df, lower.tail=FALSE))[1:nterm,]
+    tbl <- cbind(test, df, pchisq(test, df, lower.tail=FALSE))[1:nterm,, drop=FALSE]
     dimnames(tbl) <- list(termname, c("chisq", "df", "p"))
 }
 
